==> JackTJH/STM32F407/21_AD9833(Pro)Practice/APPLICATION/OLED(0.96)/OLED.c <==
#include "stm32f4xx.h"
#include "OLED.h"
#include "delay.h"
#include <string.h>
#include <math.h>
#include <stdio.h>
#include <stdarg.h>

void OLED_WriteCommand(uint8_t Command,I2C_TYPE i2c_type,I2CX_Typedef i2cx)
{
	if(i2c_type == S_I2C)
	{
		JI2C_Start(i2cx);
		JI2C_SendByte(0x78,i2cx);
		JI2C_WaitAck(i2cx);
		
		JI2C_SendByte(0x00,i2cx);
		JI2C_WaitAck(i2cx);
		
		JI2C_SendByte(Command,i2cx);
		JI2C_WaitAck(i2cx);
		
		JI2C_Stop(i2cx);	
	}
	else
	{
		I2C_GenerateSTART(JI2X[i2cx], ENABLE);
		JI2CXX_WaitEvent(i2cx,I2C_EVENT_MASTER_MODE_SELECT);

		I2C_Send7bitAddress(JI2X[i2cx], 0x78, I2C_Direction_Transmitter);
		JI2CXX_WaitEvent(i2cx,I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED);
		
		I2C_SendData(JI2X[i2cx], 0x00);
		JI2CXX_WaitEvent(i2cx,I2C_EVENT_MASTER_BYTE_TRANSMITTING);
		
		I2C_SendData(JI2X[i2cx], Command);
		JI2CXX_WaitEvent(i2cx,I2C_EVENT_MASTER_BYTE_TRANSMITTED);

		I2C_GenerateSTOP(JI2X[i2cx], ENABLE);
	}
}

void OLED_WriteData(uint8_t *Data, uint8_t Count,I2C_TYPE i2c_type,I2CX_Typedef i2cx)
{
	uint8_t i;
	
	if(i2c_type == S_I2C)
	{
		JI2C_Start(i2cx);
		JI2C_SendByte(0x78,i2cx);		//发送OLED的I2C从机地址
		JI2C_WaitAck(i2cx);

		JI2C_SendByte(0x40,i2cx);		//控制字节，给0x40，表示即将写数据
		JI2C_WaitAck(i2cx);

		/*循环Count次，进行连续的数据写入*/
		for (i = 0; i < Count; i ++)
		{
			JI2C_SendByte(Data[i],i2cx);	//依次发送Data的每一个数据
			JI2C_WaitAck(i2cx);
		}
		JI2C_Stop(i2cx);	
	}
	else
	{
		I2C_GenerateSTART(JI2X[i2cx], ENABLE);
		JI2CXX_WaitEvent(i2cx,I2C_EVENT_MASTER_MODE_SELECT);

		I2C_Send7bitAddress(JI2X[i2cx], 0x78, I2C_Direction_Transmitter);
		JI2CXX_WaitEvent(i2cx,I2C_EVENT_MASTER_BYTE_TRANSMITTING);
		
		I2C_SendData(JI2X[i2cx], 0x40);
		JI2CXX_WaitEvent(i2cx,I2C_EVENT_MASTER_BYTE_TRANSMITTING);
		
		for(i = 0; i < Count; i++)
		{
			I2C_SendData(JI2X[i2cx], Data[i]);
			JI2CXX_WaitEvent(i2cx,I2C_EVENT_MASTER_BYTE_TRANSMITTING);
		}	
		I2C_GenerateSTOP(JI2X[i2cx], ENABLE);
	}

}
